app/assets/css/main.css
body {
  background-color: #151f30;
  color: #fff;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

a {
  text-decoration: none;
}

.white-text-link {
  color: aliceblue;
}

.white-text-link:hover {
  color: #0a58ca;
}

/* for Nav bar */
.nav-navy {
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 999;
  background-color: #131720;
  background: linear-gradient(180deg, rgba(21, 31, 48, 0.35) 0%, #131720 100%);
  font-size: large;
}

@media screen and (min-width: 769px) {
  .nav-navy {
    height: 80px;
  }
}

.router-link-active {
    color: #0a58ca;
}
.nav-link:focus{
  color: #0a58ca;
}
.nav-navy::selection {
  background: #fff;
  color: #151f30;
  text-shadow: none;
}

.navbar-toggler {
  background-color: #fff;
}

.main-content {
  margin-top: 84px;
}

/* footer css */
.footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  text-align: center;
  padding-bottom: 24px;
  background: linear-gradient(180deg, rgba(21, 31, 48, 0.35) 0%, #131720 100%);
}

.footer__content {
  margin-top: 40px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  border-top: 1px solid rgba(47, 128, 237, 0.1);
}

